sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: not found: value PlusPetit
    if (!PlusPetit(i,i+1)){
         ^