sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  
  for (i<-0 to getNombreValeurs()-1){
    if (!PlusPetit(i,i+1)){
      echange(i,i+1)
    }
  }
}